Cadd text and chang font

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,26 @@
+body{
+    text-align: center;
+    width: 800px;
+    margin: 0 auto;
+    font-family: Arial;
+    background: f6f6f6;
+    font-family: 'Rajdhani', sans-serif;
+}
 h1{
-    color: red;
+    font-size: 28px;
+    line-height: 1.14286;
+    font-weight: 300;
+    letter-spacing: 0em;
+    margin-bottom: 21px;
+}
+h2{
+   font-size: 64px;
+    line-height: 1.0625;
+    font-weight: 200;
 }
 p{
-    font-size: 30px;
-    color: red;
+    font-size: 24px;
+    line-height: 1.33349;
+    font-weight: 300;
+    letter-spacing: 0em;
 }
