--- a/css/style.css
+++ b/css/style.css
@@ -4,13 +4,16 @@ body{
     margin: 0 auto;
     font-family: Arial;
     background: f6f6f6;
-    font-family: 'Rajdhani', sans-serif;
+   font-family: 'Quicksand', sans-serif;
+    font-family: 'Bubbler One', sans-serif;
+    color: #333333;
 }
 h1{
     font-size: 28px;
     line-height: 1.14286;
     font-weight: 300;
     letter-spacing: 0em;
+    margin-top: 30px;
     margin-bottom: 21px;
 }
 h2{
